test/TauCode.Mq.EasyNetQ.LocalTests/Handlers/Bad/AbstractHandler.cs
using TauCode.Mq.EasyNetQ.LocalTests.Messages.Good;

namespace TauCode.Mq.EasyNetQ.LocalTests.Handlers.Bad;

public abstract class AbstractHandler : MessageHandlerBase<HelloMessage>
{
}